Add OIDC/Oauth2 discovery support
Signed-off-by: Anders Eknert <anders@styra.com>

--- a/.regal/config.yaml
+++ b/.regal/config.yaml
@@ -1,4 +1,10 @@
 rules:
+  bugs:
+    leaked-internal-reference:
+      level: error
+      ignore:
+        files:
+          - "*_test.rego"
   custom:
     missing-metadata:
       level: error
