add pointless comments
Signed-off-by: Anders Eknert <anders@styra.com>

--- a/.regal/config.yaml
+++ b/.regal/config.yaml
@@ -30,7 +30,7 @@ rules:
         - io.jwt.verify_ps512
       ignore:
         files:
-          - "lib/**/*"
+          - "libraries/**/*"
   idiomatic:
     directory-package-mismatch:
       exclude-test-suffix: false
